syntax = "proto3";

package substreams.v1.program;

message Data {
    repeated Cancel cancel_list = 1;
    repeated CreateWithTimestamps create_with_timestamps_list = 2;
    repeated Initialize initialize_list = 3;
    repeated Renounce renounce_list = 4;
    repeated Withdraw withdraw_list = 5;
    repeated WithdrawMax withdraw_max_list = 6;
    uint64 block_number = 7;
    int64 block_timestamp = 8;
}


message Cancel {
    string instruction_program = 1;
    uint64 instruction_index = 2;
    string transaction_hash = 3;

    uint64 refunded = 4;

    string sender = 5;
    string sender_ata = 6;
    string recipient_ata = 7;

    string token_mint = 8;
    string token_program = 9;

    string treasury_pda = 10;
    string treasury_ata = 11;
 
    string stream = 12;

}
message CreateWithTimestamps {
    string instruction_program = 1;
    uint64 instruction_index = 2;
    string transaction_hash = 3;
   
    int64 start_time = 4;
    int64 cliff_time = 5;
    int64 end_time = 6;
    uint64 deposited_amount = 7;
    bool cancelable = 8;

    string sender = 9;
    string sender_ata = 10;
    string recipient = 11;
    string recipient_ata = 12;
    
    string token_mint = 13;
    string token_program = 14;

    string treasury_pda = 15;
    string treasury_ata = 16;

    string stream = 17;

}
message Initialize {
    string instruction_program = 1;
    uint64 instruction_index = 2;
    string transaction_hash = 3;

    string signer = 4;
    string treasury_pda = 5;
}
message Renounce {
    string instruction_program = 1;
    uint64 instruction_index = 2;
    string transaction_hash = 3;

    string sender = 4;
    string sender_ata = 5;

    string recipient_ata = 6;

    string stream = 7;

}
message Withdraw {
    string instruction_program = 1;
    uint64 instruction_index = 2;
    string transaction_hash = 3;

    uint64 amount = 4;

    string sender_ata = 5;
    string recipient_ata = 6;

    string token_mint = 7;
    string token_program = 8;

    string treasury_pda = 9;
    string treasury_ata = 10;

    string stream = 11;
    string signer = 12;


}
message WithdrawMax {
    string instruction_program = 1;
    uint64 instruction_index = 2;
    string transaction_hash = 3;

    uint64 amount = 4;

    string sender_ata = 5;
    string recipient_ata = 6;

    string token_mint = 7;
    string token_program = 8;

    string treasury_pda = 9;
    string treasury_ata = 10;

    string stream = 11;
    string signer = 12;
}

